--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "db:generate": "prisma generate",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
-    "db:reset": "prisma migrate reset"
+    "db:reset": "prisma migrate reset",
+    "db:test": "node scripts/test-db.js",
+    "db:setup-neon": "node scripts/setup-neon.js",
+    "setup:oauth": "node scripts/setup-oauth.js"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
