--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@types/nodemailer": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "form-data": "^4.0.4",
     "lucide-react": "^0.542.0",
     "mapbox-gl": "^3.14.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "prisma": "^6.15.0",
     "react": "19.1.0",
