--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Hanoi Plan - Discover & Plan Hangouts",
-  "short_name": "Hanoi Plan",
-  "description": "Plan the perfect hangout in Hanoi with friends. Discover places, create itineraries, and explore the city together.",
+  "name": "Pinory",
+  "short_name": "Pinory",
+  "description": "Pin your story — Ghim lại những kỷ niệm của bạn trên bản đồ. Khám phá hành trình của chính mình.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#3b82f6",
+  "theme_color": "#f8f1e5",
   "orientation": "portrait-primary",
   "icons": [
     {
@@ -15,7 +15,11 @@
       "purpose": "any maskable"
     }
   ],
-  "categories": ["travel", "social", "navigation"],
+  "categories": [
+    "travel",
+    "photography",
+    "lifestyle"
+  ],
   "lang": "vi-VN",
   "dir": "ltr",
   "scope": "/",
