--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-query": "^5.85.9",
     "@types/mapbox-gl": "^3.4.1",
     "@types/nodemailer": "^7.0.1",
+    "@types/supercluster": "^7.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "form-data": "^4.0.4",
@@ -52,6 +53,7 @@
     "react-hook-form": "^7.62.0",
     "react-map-gl": "^8.0.4",
     "sonner": "^2.0.7",
+    "supercluster": "^8.0.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
