--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "form-data": "^4.0.4",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.542.0",
     "mapbox-gl": "^3.14.0",
     "next": "15.5.2",
