--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/mapbox-gl": "^3.4.1",
     "@types/nodemailer": "^7.0.1",
     "@types/supercluster": "^7.1.3",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "form-data": "^4.0.4",
