--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.542.0",
     "mapbox-gl": "^3.14.0",
-    "next": "15.5.2",
+    "next": "^16.0.7",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
@@ -68,7 +68,7 @@
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^16.0.7",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
