--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.15.0",
@@ -50,6 +51,7 @@
     "@types/nodemailer": "^7.0.1",
     "@types/supercluster": "^7.1.3",
     "@vercel/speed-insights": "^1.2.0",
+    "antd": "^6.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "form-data": "^4.0.4",
@@ -66,6 +68,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-map-gl": "^8.0.4",
+    "shepherd.js": "^14.5.1",
     "sonner": "^2.0.7",
     "supercluster": "^8.0.1",
     "tailwind-merge": "^3.3.1",
