--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "sonner": "^2.0.7",
     "supercluster": "^8.0.1",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
   },
